--- a/asset/css/styles.css
+++ b/asset/css/styles.css
@@ -39,6 +39,7 @@ body {
 }
 .text-primary {
   color: var(--bs-primary) !important;
+  font-family: "El Messiri", sans-serif;
 }
 .bg-primary {
   background: var(--bs-primary) !important;
